<resources>
    <string name="app_name">PiusApp</string>

    <string name="notification_channel_id">main_channel_id</string>
    <string name="notification_channel_name">notifications</string>
    <string name="notification_channel_description">Alle Benachrichtigungen</string>

    <string name="navigation_drawer_open">Öffne Übersicht</string>
    <string name="navigation_drawer_close">Schließe Übersicht</string>

    <string name="nav_group_vtr_plan">Vertretungspläne</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_vtr_plan">Vertretungsplan</string>
    <string name="nav_stundenplan">Stundenplan</string>
    <string name="nav_group_news">Neuigkeiten</string>
    <string name="nav_news">News</string>
    <string name="nav_termine">Termine</string>
    <string name="nav_group_information">Informationen</string>
    <string name="nav_teacher">Lehrer und Mitarbeiter</string>
    <string name="nav_unterrichtszeiten">Unterrichtszeiten</string>
    <string name="nav_group_settings">Einstellungen</string>
    <string name="nav_kurse">Kurse</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_impressum">Impressum</string>

    <string name="url">https://www.pius-gymnasium.de/vertretungsplan/</string>
    <string name="vertretungs_error">Leider ist ein Fehler beim Darstellen aufgetreten\nAktualisiere um es erneut zu versuchen</string>
    <string name="vertretungs_filename">vertretungsDaten.json</string>

    <string name="username_text">Benutzername:</string>
    <string name="username">Benutzername</string>
    <!--TODO verbessere explanations-->
    <string name="username_explanation">Hier gibt ein super tolles Username rein</string>
    <string name="password_text">Passwort:</string>
    <string name="password">Passwort</string>
    <string name="password_explanation">Hier gibt ein super tolles Passwort rein</string>

    <string name="impressum_heading">Impressum</string>
    <string name="impressum_developer_description">Pius App Entwickler:</string>
    <string name="impressum_developer_1">Jacob Peters</string>
    <string name="impressum_developer_2">Álvaro Winkels</string>


    <string name="kurse_heading">Deine Klasse/Stufe/Kurse:</string>
    <!--TODO verbessere keine_kurse-->
    <string name="keine_kurse">Du hast noch nicht deine Kurse ausgewählt.\nWähle deine eigenen Kurse aus um auf dem Dashboard eine gekürzte Fassung des Vertretungsplans zu sehen und Benachrichtigungen zu bekommen.</string>
    <string name="add_kurse_manually">Neue Klasse/Stufe/Kurs hinzufügen</string>
    <string name="add_kurse_pdf">Neue Klasse/Stufe/Kurs hinzufügen</string>
    <string name="add_kurse_scan">Neue Klasse/Stufe/Kurs hinzufügen</string>
    <string name="kurse_filename">kurse.json</string>

    <string name="dialog_add_title_stufe">Wähle deine Stufe:</string>
    <string name="dialog_add_title_klasse">Wähle deine Stufe und Klasse:</string>
    <string name="dialog_add_title_kurs">Wähle deine Stufe oder Kurs:</string>
    <string name="dialog_edit_title_stufe">Bearbeite deine Stufe:</string>
    <string name="dialog_edit_title_klasse">Bearbeite deine Stufe und Klasse:</string>
    <string name="dialog_edit_title_kurs">Bearbeite deine Stufe oder Kurs:</string>

    <string name="dialog_explanation_kurs">Du kannst entweder die ganze Stufe oder einzelne Kurse auswählen</string>

    <string name="add_kurs">Kurs hinzufügen</string>
    <string name="add_klasse">Klasse hinzufügen</string>
    <string name="add_stufe">Stufe hinzufügen</string>
    <string name="duplicate_kurs">Diesen Kurs hast du bereits hinzugefügt</string>
    <string name="cancel_kurs">Abbrechen</string>

    <string-array name="stufen">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>IKE</item>
        <item>IKD</item>
        <item>EF</item>
        <item>Q1</item>
        <item>Q2</item>
    </string-array>
    <string-array name="klassen">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>
    <!--TODO du musst keinen kurs verbessern-->
    <string-array name="kurse_fach">
        <item>---</item>
        <item>M</item>
        <item>D</item>
        <item>E</item>
        <item>IF</item>
        <item>PL</item>
        <item>KU</item>
        <item>MU</item>
        <item>PL</item>
        <item>KR</item>
        <item>PH</item>
        <item>EK</item>
        <item>CH</item>
        <item>GE</item>
        <item>BI</item>
        <item>SP</item>
        <item>PM</item>
        <item>PE</item>
    </string-array>
    <string-array name="kurse_type_EF">
        <item>G</item>
    </string-array>
    <string-array name="kurse_type_Q1">
        <item>G</item>
        <item>L</item>
    </string-array>
    <string-array name="kurse_type_Q2">
        <item>G</item>
        <item>L</item>
        <item>Z</item>
    </string-array>
    <string-array name="kurse_zahl">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string name="settings_refresh_appstart">Aktualisieren bei Appstart</string>
    <string name="settings_short_terms">Kürze Begriffe wie \"Lehrkraft laut Plan\"</string>
    <string name="settings_change_login">Ändere Login</string>
    <string name="settings_login">Login</string>
    <string name="settings_developer_crash">Crash App</string>
    <string name="settings_background_refresh">Aktualisiere im Hintergrund</string>
    <string name="settings_background_refresh_time">Aktualisiere alle </string>
    <string name="settings_refresh_evening">Überblick über Vertretung für kommenden Tag um 18 Uhr</string>
    <string name="settings_notification">Benachrichtigungen für deine Kurse</string>
    <string name="settings_vibrate">Vibriere</string>
    <string name="settings_heads_up">Blende Benachrichtigungen ein</string>
    <!--TODO: change time intervalls, if you do so don't forget to also change them in settingsFragment.java-->
    <string-array name="settings_refresh_time_options">
        <item>15 min</item>
        <item>20 min</item>
        <item>30 min</item>
        <item>1 Stunde</item>
        <item>2 Stunden</item>
        <item>3 Stunden</item>
    </string-array>

    <!--TODO verbessere Start Worte-->
    <string name="start_introduction">Bla bli blub ein paar Start Worte</string>
    <string name="start_introduction_comeback">Bla bli blub ein paar Start Worte falls du die Pius App schon installiert hattest</string>
    <string name="start_next_page">Weiter</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="crashed_message_welcome">Leider ist ein schwerwiegender Fehler in der App aufgetreten\nVersuche eventuell die App nochmal zu öffnen oder setze die App komplett zurück</string>
    <string name="crashed_message_contact_developers">Solltest du die Entwickler kennen, wäre es zur Verbesserung der Stabiltät der App hilfreich wenn du ihnen die Fehlermeldung zusendest</string>
    <string name="crashed_clipboard">In Zwischenablage kopieren</string>
    <string name="crashed_share">Teilen</string>
    <string name="crashed_restart">Neustarten</string>
    <string name="crashed_reset">PiusApp komplett zurücksetzen</string>
    <string name="crashed_share_chooser_heading">Wie soll die Fehlermeldung an die Entwickler versandt werden?</string>

    <string-array name="vertretungsplan_klassen_beschriftung">
        <item>Std.</item>
        <item>Art</item>
        <item>Kurs</item>
        <item>Raum</item>
        <item>Akt.</item>
        <item>Bemerkung</item>
    </string-array>
    <string name="eva">Auftrag:</string>
    <string name="ticker">Ticker-Text:</string>
    <string name="nicht_betroffen">Keiner deiner ausgewählten Kurse ist betroffen!</string>

</resources>
