<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StartActivity"
    tools:showIn="@layout/activity_start"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ntf_logo_big" />

    <TextView
        android:id="@+id/start_introduction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_introduction"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <LinearLayout
        android:id="@+id/login_linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:descendantFocusability="beforeDescendants"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo">

        <TextView
            android:id="@+id/username_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <jayjay.de.piusapp.WatchfulEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/start_info_button_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/username_edit_text"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/information" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/start_info_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_rounded_corners"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:text="@string/username_explanation"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/password_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password_text"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <jayjay.de.piusapp.WatchfulEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textVisiblePassword" />

            <ImageView
                android:id="@+id/start_info_button_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/information" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/start_info_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_rounded_corners"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:text="@string/password_explanation"
            android:textColor="@android:color/white"
            android:visibility="gone" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/start_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:progress="@android:integer/config_longAnimTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_linear"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/next_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="next"
        android:text="@string/start_next_page"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>